Revision history for FusionInventory agent

2.5.2 not released yet

inventory:
* unix: fix last log user after a reboot
* added Samsung S22B420 monitor serial support

2.5.1 Tue, 02 Jul 2019

core:
* build: fix fusioninventory-remoteinventory was not installed
* fix HTTP server plugins base configuration folder
* fix HTTP server plugins installation from Makefile
* fix HTTP server SSL plugin so SSL sessions are not closed after one second
* fix #679: Win32 service HTTP server wasn't answering during an inventory
* feature: Added Proxy and SecondaryProxy HTTP server plugins

inventory:
* Bump Inventory task version to 1.8
* fix error message while starting fusioninventory-inventory script
* fix #667: LG tv monitor inventory failure
* win32: VirtualBox or VPN network adapters are now set as virtual
* added Samsung S24E450 monitor serial support
* linux: fix megacli storage analysis
* linux: check package status before telling it is installed on debian/ubuntu
* fix #688: inventory on "windows x64 1903" takes too much time. That was only
  happen when an antivirus other than Windows Defender was enabled and it blocks
  WMI call toward MSFT_MpComputerStatus class.
* win32: Add Symantec/Norton antivirus support
* fix #399: Deduplicate logged users without being case sensitive on win32
* Updated pci.ids to 2019.06.30 version
* Updated usb.ids to 2019.05.08 version

netdiscovery/netinventory:
* Bump NetDiscovery task version to 4.0
* Bump NetInventory task version to 4.0
* add Hygon Dhyana Support
* refactor: the multi-threading scheme has been re-worked so it is now working for
  netinventory task and more efficient for netdiscovery while scanning many range
  by job
* refactor: Collected datas are also sent to server from threads
* Added 2 options to fusioninventory-netdiscovery to save XMLs as file and
  automatically start netinventory when convenient:
  * add --inventory option to netdiscovery to automatically start netinventory